[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/Scripting/Scripting.gd" type="Script" id=1]
[ext_resource path="res://src/Scripting/NodeSearcher.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scripting/ScriptingGraph.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/scripting/scripting_icon_save.png" type="Texture" id=4]
[ext_resource path="res://assets/images/scripting/scripting_icon_cancel.png" type="Texture" id=5]
[ext_resource path="res://assets/themes/scripting_menu_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/images/ui/vaperwave_pattern.png" type="Texture" id=7]
[ext_resource path="res://assets/images/scripting/scripting_icon_restore.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/button.wav" type="AudioStream" id=10]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform sampler2D pattern;

void fragment() {
	vec2 _uv = mod((UV + TIME * 0.15) * vec2(10.0, 6.0) * 2.0, 1.0);
	vec4 _color = texture(pattern, _uv);
	_color.a = 0.2;
	
	COLOR = _color;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/pattern = ExtResource( 7 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void fragment() {
	vec2 _uv = UV * 1.5;
	_uv.x += TIME * 0.3;
	_uv.y += TIME * 0.3;
	vec4 color = texture(TEXTURE, _uv);
	COLOR.rgba = color;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "Close"
tracks/0/type = "bezier"
tracks/0/path = NodePath("MarginContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, 0, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MarginContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, 0, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MarginContainer:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, 0, 0, 0, 0, 1e-05, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MarginContainer:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, 0, 0, 0, 0, 1e-05, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("MarginContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("MarginContainer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Open"
tracks/0/type = "bezier"
tracks/0/path = NodePath("MarginContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -1, 0, 0, 0, 0, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MarginContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -1, 0, 0, 0, 0, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MarginContainer:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1e-05, -1, 0, 0, 0, 1, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MarginContainer:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1e-05, -1, 0, 0, 0, 1, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("MarginContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("MarginContainer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("MarginContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MarginContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MarginContainer:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MarginContainer:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("MarginContainer:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("MarginContainer:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("MarginContainer:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("MarginContainer:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("MarginContainer:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Scripting" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ScriptingEffect" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="ScriptingEffect"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
margin_right = 960.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 520 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 952.0
margin_bottom = 532.0
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 136.0
margin_bottom = 524.0
theme = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 516.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 17.0
text = "Objetivo:"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer"]
modulate = Color( 0.466667, 0.14, 0.7, 1 )
material = SubResource( 5 )
margin_top = 25.0
margin_right = 120.0
margin_bottom = 145.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 2

[node name="Sprite" type="Sprite" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer"]
position = Vector2( 60, 80 )
hframes = 4
vframes = 4

[node name="HairSprite" type="Sprite" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer"]
position = Vector2( 60, 80 )
hframes = 4
vframes = 4

[node name="SaveBtn" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 120.0
margin_bottom = 186.0
focus_mode = 0
text = "Guardar"
icon = ExtResource( 4 )
expand_icon = true

[node name="RestoreBtn" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 120.0
margin_bottom = 227.0
rect_min_size = Vector2( 120, 0 )
focus_mode = 0
text = "Restaurar"
icon = ExtResource( 9 )
expand_icon = true

[node name="CancelBtn" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 120.0
margin_bottom = 268.0
rect_min_size = Vector2( 120, 0 )
focus_mode = 0
text = "Cancelar"
icon = ExtResource( 5 )
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 944.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScriptingGraph" parent="MarginContainer/HBoxContainer/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 808.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NodeSearcher" parent="." instance=ExtResource( 2 )]
margin_left = 84.0
margin_right = 264.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 6.0
anims/Close = SubResource( 3 )
anims/Open = SubResource( 6 )
anims/RESET = SubResource( 2 )

[node name="ButtonSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Sfx"
